Cleaned up some tests.