@@ -1,23 +1,23 @@
 /*
  * #%L
  * Bitrepository Common
- * 
+ *
  * $Id$
  * $HeadURL$
  * %%
  * Copyright (C) 2010 - 2011 The State and University Library, The Royal Library and The State Archives, Denmark
  * %%
  * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as 
- * published by the Free Software Foundation, either version 2.1 of the 
+ * it under the terms of the GNU Lesser General Public License as
+ * published by the Free Software Foundation, either version 2.1 of the
  * License, or (at your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Lesser Public License for more details.
- * 
- * You should have received a copy of the GNU General Lesser Public 
+ *
+ * You should have received a copy of the GNU General Lesser Public
  * License along with this program.  If not, see
  * <http://www.gnu.org/licenses/lgpl-2.1.html>.
  * #L%
@@ -55,7 +55,7 @@ import javax.jms.JMSException;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * Contains the generic parts for integration testing.
@@ -73,9 +73,13 @@ public abstract class IntegrationTest extends ExtendedTestCase {
 
     protected static SecurityManager securityManager;
 
-    /** Settings for the Component-Under-Test */
+    /**
+     * Settings for the Component-Under-Test
+     */
     protected static Settings settingsForCUT;
-    /** Settings for the Test components */
+    /**
+     * Settings for the Test components
+     */
     protected static Settings settingsForTestClient;
     protected static String collectionID;
 
@@ -84,7 +88,7 @@ public abstract class IntegrationTest extends ExtendedTestCase {
     protected static URL DEFAULT_FILE_URL;
     protected static String DEFAULT_DOWNLOAD_FILE_ADDRESS;
     protected static String DEFAULT_UPLOAD_FILE_ADDRESS;
-    protected String DEFAULT_AUDITINFORMATION;
+    protected String DEFAULT_AUDIT_INFORMATION;
 
     protected String testMethodName;
 
@@ -117,6 +121,7 @@ public abstract class IntegrationTest extends ExtendedTestCase {
         alarmReceiver = new MessageReceiver(settingsForCUT.getAlarmDestination(), testEventManager);
         addReceiver(alarmReceiver);
     }
+
     protected void addReceiver(MessageReceiver receiver) {
         receiverManager.addReceiver(receiver);
     }
@@ -125,7 +130,7 @@ public abstract class IntegrationTest extends ExtendedTestCase {
     public void initMessagebus() {
         setupMessageBus();
     }
-    
+
     @AfterSuite(alwaysRun = true)
     public void shutdownSuite() {
         teardownMessageBus();
@@ -140,22 +145,23 @@ public abstract class IntegrationTest extends ExtendedTestCase {
         testMethodName = method.getName();
         setupSettings();
         NON_DEFAULT_FILE_ID = TestFileHelper.createUniquePrefix(testMethodName);
-        DEFAULT_AUDITINFORMATION = testMethodName;
+        DEFAULT_AUDIT_INFORMATION = testMethodName;
         receiverManager = new MessageReceiverManager(messageBus);
         registerMessageReceivers();
-        messageBus.setCollectionFilter(Arrays.asList(new String[]{}));
-        messageBus.setComponentFilter(Arrays.asList(new String[]{}));
+        messageBus.setCollectionFilter(List.of());
+        messageBus.setComponentFilter(List.of());
         receiverManager.startListeners();
         initializeCUT();
     }
+
     /**
-     *  To be overridden by concrete tests wishing to do stuff. Remember to call super if this is overridden.
+     * To be overridden by concrete tests wishing to do stuff. Remember to call super if this is overridden.
      */
     protected void initializeCUT() {}
 
     @AfterMethod(alwaysRun = true)
     public final void afterMethod(ITestResult testResult) {
-        if ( receiverManager != null ) {
+        if (receiverManager != null) {
             receiverManager.stopListeners();
         }
         if (testResult.isSuccess()) {
@@ -178,8 +184,9 @@ public abstract class IntegrationTest extends ExtendedTestCase {
     protected void clearReceivers() {
         receiverManager.clearMessagesInReceivers();
     }
+
     /**
-     *  May be overridden by concrete tests wishing to do stuff. Remember to call super if this is overridden.
+     * May be overridden by concrete tests wishing to do stuff. Remember to call super if this is overridden.
      */
     protected void shutdownCUT() {}
 
@@ -197,10 +204,11 @@ public abstract class IntegrationTest extends ExtendedTestCase {
         makeUserSpecificSettings(settingsForTestClient);
     }
 
-    /** Can be overloaded by tests needing to load custom settings */
+    /**
+     * Can be overloaded by tests needing to load custom settings
+     */
     protected Settings loadSettings(String componentID) {
-        Settings settings = TestSettingsProvider.reloadSettings(componentID);
-        return settings;
+        return TestSettingsProvider.reloadSettings(componentID);
     }
 
     private void makeUserSpecificSettings(Settings settings) {
@@ -210,7 +218,7 @@ public abstract class IntegrationTest extends ExtendedTestCase {
                 settings.getAlarmDestination() + getTopicPostfix());
     }
 
-    @BeforeTest (alwaysRun = true)
+    @BeforeTest(alwaysRun = true)
     public void writeLogStatus() {
         if (System.getProperty("enableLogStatus", "false").equals("true")) {
             LoggerContext lc = (LoggerContext) LoggerFactory.getILoggerFactory();
@@ -218,12 +226,16 @@ public abstract class IntegrationTest extends ExtendedTestCase {
         }
     }
 
-    /** Indicated whether an embedded active MQ should be started and used */
+    /**
+     * Indicated whether an embedded active MQ should be started and used
+     */
     public boolean useEmbeddedMessageBus() {
         return System.getProperty("useEmbeddedMessageBus", "true").equals("true");
     }
 
-    /** Indicated whether an embedded http server should be started and used */
+    /**
+     * Indicated whether an embedded http server should be started and used
+     */
     public boolean useEmbeddedHttpServer() {
         return System.getProperty("useEmbeddedHttpServer", "false").equals("true");
     }
@@ -232,7 +244,7 @@ public abstract class IntegrationTest extends ExtendedTestCase {
      * Hooks up the message bus.
      */
     protected void setupMessageBus() {
-        if(useEmbeddedMessageBus()) {
+        if (useEmbeddedMessageBus()) {
             if (messageBus == null) {
                 messageBus = new SimpleMessageBus();
             }
@@ -253,7 +265,7 @@ public abstract class IntegrationTest extends ExtendedTestCase {
             }
         }
 
-        if(broker != null) {
+        if (broker != null) {
             try {
                 broker.stop();
                 broker = null;
@@ -273,8 +285,9 @@ public abstract class IntegrationTest extends ExtendedTestCase {
     }
 
     /**
-     * Returns the postfix string to use when accessing user specific topics, which is the mechanism we use in the 
+     * Returns the postfix string to use when accessing user specific topics, which is the mechanism we use in the
      * bit repository tests.
+     *
      * @return The string to postfix all topix names with.
      */
     protected String getTopicPostfix() {
